--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "bach": "0.0.1",
     "async-done": "git://github.com/phated/async-done#master",
-    "async-time": "0.0.1"
+    "async-time": "0.0.1",
+    "q": "~1.0.1"
   },
   "devDependencies": {
     "lab": "^3.1.1",
