--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "compose"
   ],
   "dependencies": {
-    "bach": "~0.1.0",
-    "async-done": "~0.3.0"
+    "async-done": "~0.3.0",
+    "now-and-later": "0.0.1"
   },
   "devDependencies": {
     "lab": "^3.1.1",
